--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Video Generator</title>
+    <title>Milkfish DIT</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🎬 AI Video Generator</h1>
+            <h1>🎬 Milkfish DIT</h1>
             <p>Create engaging videos with AI-generated content</p>
         </header>
 
