--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milkfish DIT</title>
+    <title>Milkfish DIT - AI Video Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,10 +14,8 @@
         </header>
 
         <main>
-            <!-- Generation Form Section -->
             <section class="generation-section">
                 <h2>Generate New Video</h2>
-                
                 <form id="generateForm" class="generation-form">
                     <div class="form-group">
                         <label for="topic">Topic/Prompt *</label>
@@ -28,110 +26,69 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="promptType">Prompt Type</label>
-                            <select id="promptType" name="promptType">
-                                <!-- Options loaded dynamically -->
-                            </select>
+                            <select id="promptType" name="promptType"></select>
                         </div>
-
                         <div class="form-group">
                             <label for="model">Image Model</label>
-                            <select id="model" name="model">
-                                <!-- Options loaded dynamically -->
-                            </select>
+                            <select id="model" name="model"></select>
                         </div>
-
                         <div class="form-group">
                             <label for="voice">Voice</label>
-                            <select id="voice" name="voice">
-                                <!-- Options loaded dynamically -->
-                            </select>
+                            <select id="voice" name="voice"></select>
                         </div>
                     </div>
 
-                    <!-- Advanced Settings (Collapsible) -->
                     <details class="advanced-settings">
                         <summary>Advanced Settings</summary>
-                        
-                        <div class="settings-section">
-                            <h3>Video Settings</h3>
-                            <div class="form-row">
-                                <div class="form-group">
-                                    <label for="fps">FPS</label>
-                                    <input type="number" id="fps" name="fps" value="24" min="1" max="60">
-                                </div>
-                                <div class="form-group">
-                                    <label for="aspectRatio">Aspect Ratio</label>
-                                    <select id="aspectRatio" name="aspectRatio">
-                                        <option value="9:16">9:16 (Portrait)</option>
-                                        <option value="16:9">16:9 (Landscape)</option>
-                                        <option value="1:1">1:1 (Square)</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="transitionDuration">Transition Duration</label>
-                                    <input type="number" id="transitionDuration" name="transitionDuration" 
-                                           value="0.5" min="0" max="2" step="0.1">
-                                </div>
+                        <div class="settings-grid">
+                            <div class="form-group">
+                                <label for="fps">FPS</label>
+                                <input type="number" id="fps" name="fps" value="24" min="1" max="60">
                             </div>
-                        </div>
-
-                        <div class="settings-section">
-                            <h3>Subtitle Settings</h3>
-                            <div class="form-row">
-                                <div class="form-group checkbox-group">
-                                    <label>
-                                        <input type="checkbox" id="subtitles" name="subtitles" checked>
-                                        Enable Subtitles
-                                    </label>
-                                </div>
-                                <div class="form-group">
-                                    <label for="subtitleStyle">Style</label>
-                                    <select id="subtitleStyle" name="subtitleStyle">
-                                        <!-- Options loaded dynamically -->
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="subtitleAnimation">Animation</label>
-                                    <select id="subtitleAnimation" name="subtitleAnimation">
-                                        <!-- Options loaded dynamically -->
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="subtitlePosition">Position</label>
-                                    <select id="subtitlePosition" name="subtitlePosition">
-                                        <!-- Options loaded dynamically -->
-                                    </select>
-                                </div>
+                            <div class="form-group">
+                                <label for="aspectRatio">Aspect Ratio</label>
+                                <select id="aspectRatio" name="aspectRatio">
+                                    <option value="9:16">9:16 (Portrait)</option>
+                                    <option value="16:9">16:9 (Landscape)</option>
+                                    <option value="1:1">1:1 (Square)</option>
+                                </select>
                             </div>
-                        </div>
-
-                        <div class="settings-section">
-                            <h3>Effects</h3>
-                            <div class="form-row">
-                                <div class="form-group checkbox-group">
-                                    <label>
-                                        <input type="checkbox" id="panEffect" name="panEffect" checked>
-                                        Pan Effect
-                                    </label>
-                                </div>
-                                <div class="form-group checkbox-group">
-                                    <label>
-                                        <input type="checkbox" id="zoomEffect" name="zoomEffect" checked>
-                                        Zoom Effect
-                                    </label>
-                                </div>
-                                <div class="form-group checkbox-group">
-                                    <label>
-                                        <input type="checkbox" id="highlightKeywords" name="highlightKeywords" checked>
-                                        Highlight Keywords
-                                    </label>
-                                </div>
-                                <div class="form-group">
-                                    <label for="transitionStyle">Transition Style</label>
-                                    <select id="transitionStyle" name="transitionStyle">
-                                        <!-- Options loaded dynamically -->
-                                    </select>
-                                </div>
+                            <div class="form-group">
+                                <label for="transitionDuration">Transition Duration</label>
+                                <input type="number" id="transitionDuration" name="transitionDuration" 
+                                       value="0.5" min="0" max="2" step="0.1">
+                            </div>
+                            <div class="form-group checkbox-group">
+                                <label>
+                                    <input type="checkbox" name="subtitles" checked>
+                                    Enable Subtitles
+                                </label>
+                            </div>
+                            <div class="form-group">
+                                <label for="subtitleStyle">Subtitle Style</label>
+                                <select id="subtitleStyle" name="subtitleStyle"></select>
+                            </div>
+                            <div class="form-group">
+                                <label for="subtitleAnimation">Animation</label>
+                                <select id="subtitleAnimation" name="subtitleAnimation"></select>
+                            </div>
+                            <div class="form-group checkbox-group">
+                                <label>
+                                    <input type="checkbox" name="panEffect" checked>
+                                    Pan Effect
+                                </label>
+                            </div>
+                            <div class="form-group checkbox-group">
+                                <label>
+                                    <input type="checkbox" name="zoomEffect" checked>
+                                    Zoom Effect
+                                </label>
+                            </div>
+                            <div class="form-group checkbox-group">
+                                <label>
+                                    <input type="checkbox" name="highlightKeywords" checked>
+                                    Highlight Keywords
+                                </label>
                             </div>
                         </div>
                     </details>
@@ -142,7 +99,6 @@
                     </button>
                 </form>
 
-                <!-- Progress Section -->
                 <div id="progressSection" class="progress-section" style="display: none;">
                     <h3>Generation Progress</h3>
                     <div class="progress-bar">
@@ -152,29 +108,26 @@
                 </div>
             </section>
 
-            <!-- Video Gallery Section -->
             <section class="gallery-section">
                 <div class="gallery-header">
                     <h2>Generated Videos</h2>
                     <div class="gallery-controls">
+                        <input type="text" id="searchVideos" placeholder="Search..." class="search-input">
                         <select id="filterPromptType" class="filter-select">
                             <option value="">All Types</option>
                         </select>
-                        <button id="refreshGallery" class="refresh-btn">↻ Refresh</button>
+                        <button id="refreshGallery" class="refresh-btn">↻</button>
                     </div>
                 </div>
 
-                <div id="videoGallery" class="video-gallery">
-                    <!-- Video cards will be loaded here -->
-                </div>
-
+                <div id="videoGallery" class="video-gallery"></div>
                 <div id="emptyGallery" class="empty-gallery" style="display: none;">
                     <p>No videos generated yet. Create your first video above!</p>
                 </div>
+                <div id="paginationContainer" class="pagination-container"></div>
             </section>
         </main>
 
-        <!-- Video Modal -->
         <div id="videoModal" class="modal" style="display: none;">
             <div class="modal-content">
                 <span class="modal-close">&times;</span>
@@ -183,16 +136,9 @@
             </div>
         </div>
 
-        <!-- Error Modal -->
-        <div id="errorModal" class="error-modal" style="display: none;">
-            <div class="error-content">
-                <span class="error-close">&times;</span>
-                <h3>Error</h3>
-                <p id="errorMessage"></p>
-            </div>
-        </div>
+        <div id="notificationContainer" class="notification-container"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 </body>
 </html>
